fix: align buttons for rtl mode

--- a/views/scss/qtiCreator/_match.scss
+++ b/views/scss/qtiCreator/_match.scss
@@ -85,4 +85,10 @@
             top: 0;
         }
     }
+
+    @include rtl {
+        .rgt {
+            float: left;
+        }
+    }
 }
